--- a/CampusHub/CampusHub.Presentation.csproj
+++ b/CampusHub/CampusHub.Presentation.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="FluentResults.Extensions.AspNetCore" Version="0.2.0" />
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Server.Abstractions" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
       <PrivateAssets>all</PrivateAssets>
@@ -27,6 +30,10 @@
     <ProjectReference Include="..\CampusHub.Application\CampusHub.Application.csproj" />
     <ProjectReference Include="..\CampusHub.Domain\CampusHub.Domain.csproj" />
     <ProjectReference Include="..\CampusHub.Infrastructure\CampusHub.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\events\" />
   </ItemGroup>
 
 </Project>
